--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -28,18 +28,18 @@
                                         <f:ajax execute="@this" render="lstSelect" event="keyup" />
                                     </p:inputText>
 
-                                  <h:selectOneListbox  id="lstSelect"   size="10" value="#{consultantController.current}" style="min-width: 223px;">
+                                    <h:selectOneListbox  id="lstSelect"   size="10" value="#{consultantController.current}" style="min-width: 223px;">
                                         <f:selectItems  value="#{consultantController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
                                         <f:ajax render="gpDetail" execute="lstSelect" />                                        
                                     </h:selectOneListbox>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpSelectButtons" columns="3"  >
                                     <p:commandButton id="btnAdd" value="Add"  
-                                                    action="#{consultantController.prepareAdd()}" styleClass="buttons" ajax="false"/>                                   
-                                        <p:commandButton ajax="false" id="btnDelete" 
-                                                         onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                                     return false;" action="#{consultantController.delete()}"  value="Delete">
-                                        </p:commandButton>
+                                                     action="#{consultantController.prepareAdd()}" styleClass="buttons" ajax="false"/>                                   
+                                    <p:commandButton ajax="false" id="btnDelete" 
+                                                     onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                                 return false;" action="#{consultantController.delete()}"  value="Delete">
+                                    </p:commandButton>
                                 </h:panelGrid>
 
                             </p:panel>
@@ -48,6 +48,13 @@
                         <p:panel>
                             <h:panelGrid id="gpDetail" columns="1">
                                 <h:panelGrid id="gpDetailText" columns="2">
+                                    <h:outputText  value="Title" />
+                                    <p:selectOneMenu  id="cmbTitle"  
+                                                      value="#{consultantController.current.person.title}"  >
+                                        <f:selectItem itemLabel="Select Title" />
+                                        <f:selectItems value="#{enumController.titleDoctor}" var="i" 
+                                                       itemLabel="#{i.label}" itemValue="#{i}"/>
+                                    </p:selectOneMenu>
                                     <h:outputText  value="Name" />
                                     <p:inputText autocomplete="off" value="#{consultantController.current.person.name}"  />
                                     <h:outputText  value="Phone" />
@@ -78,7 +85,7 @@
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
                                     <p:commandButton id="btnSave" value="Save" ajax="false"
-                                                    action="#{consultantController.saveSelected()}" styleClass="buttons"/>
+                                                     action="#{consultantController.saveSelected()}" styleClass="buttons"/>
 
                                     <p:defaultCommand target="btnSave"/>
                                 </h:panelGrid>
