--- a/src/main/webapp/resources/cashier/channelBilledBill.xhtml
+++ b/src/main/webapp/resources/cashier/channelBilledBill.xhtml
@@ -34,6 +34,12 @@
                 </f:facet>
                 <h:outputLabel value="#{b.deptId}"/>
             </p:column>
+            <p:column headerText="Id" >
+                <f:facet name="header">  
+                    <h:outputLabel value="ID"/>
+                </f:facet>
+                <h:outputLabel value="#{b.netTotal-b.staffFee}"/>
+            </p:column>
             <p:column headerText="Id" rendered="#{cc.attrs.agent}" >
                 <f:facet name="header">  
                     <h:outputLabel value="Agent Code"/>
