--- a/src/main/webapp/channel/channel_booking_editing_appoinment_count.xhtml
+++ b/src/main/webapp/channel/channel_booking_editing_appoinment_count.xhtml
@@ -175,9 +175,17 @@
                                         </h:outputText>
                                     </p:column>
                                     <p:column headerText="Time" style="width: 40px!important; text-align: center;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Ruhuna'}">
-                                        <h:outputText value="#{ses.startingTime}">
-                                            <f:convertDateTime pattern="hh:mm"/>
-                                        </h:outputText>
+                                        <p:cellEditor>
+                                            <f:facet name="output" >
+                                                <h:outputText value="#{ses.startingTime}">
+                                                    <f:convertDateTime pattern="hh:mm"/>
+                                                </h:outputText>
+                                            </f:facet>
+                                            <f:facet name="input" >
+                                                <p:calendar  value="#{ses.startingTime}" navigator="true" pattern="HH:mm" timeOnly="true">                            
+                                                </p:calendar>
+                                            </f:facet>
+                                        </p:cellEditor>
                                     </p:column>
                                     <p:column headerText="Fee" style="width: 40px!important; text-align: center;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Ruhuna'}">
                                         <h:outputText value="#{ses.totalFee}">
