--- a/src/main/webapp/channel/channel_booking_past.xhtml
+++ b/src/main/webapp/channel/channel_booking_past.xhtml
@@ -308,7 +308,7 @@
                                         <p:separator ></p:separator>
 
                                         <p:outputLabel value="Bill No"/>
-                                        <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.insId}"/>
+                                        <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.deptId}"/>
                                         <p:outputLabel value="Payment"/>
                                         <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.paymentMethod}"/>
                                         <p:outputLabel value="Agent" rendered="#{bookingPastController.selectedBillSession.bill.paymentMethod eq 'Agent'}"/>
@@ -384,7 +384,7 @@
                                 <p:panel header="Settling" rendered="#{(bookingPastController.selectedBillSession.bill.paidBill ne bookingPastController.selectedBillSession.bill) and bookingPastController.selectedBillSession.bill.balance eq 0.0}">
                                     <h:panelGrid columns="2">
                                         <p:outputLabel value="Bill Id"/>
-                                        <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.paidBill.insId}"/>
+                                        <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.paidBill.deptId}"/>
                                         <p:outputLabel value="Payment Method"/>
                                         <p:outputLabel value="#{bookingPastController.selectedBillSession.bill.paidBill.paymentMethod}"/>
                                         <p:outputLabel value="Agent" rendered="#{bookingPastController.selectedBillSession.bill.paidBill.paymentMethod eq 'Agent'}"/>
