Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/collecting_centre/collecting_centre_search_bill_own.xhtml
+++ b/src/main/webapp/collecting_centre/collecting_centre_search_bill_own.xhtml
@@ -116,7 +116,7 @@
                             </p:column>    
                             <p:column headerText="Client">                               
                                 <h:outputLabel value="#{bill.patient.person.nameWithTitle}" />                                   
-                                <h:commandLink value="(edit)" action="patient" rendered="#{webUserController.hasPrivilege('OpdBillSearchEdit')}">
+                                <h:commandLink value="(edit)" action="/patient" rendered="#{webUserController.hasPrivilege('OpdBillSearchEdit')}">
                                     <f:setPropertyActionListener value="#{bill.patient}" target="#{patientController.current}"/>
                                 </h:commandLink>
 
