--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -102,19 +102,24 @@
                                  selectionMode="single" 
                                  selection="#{bookingController.selectedServiceSession}"
                                  scrollable="true" 
-                                 scrollHeight="300" rowStyleClass="#{ses.deactivated ? 'redText':''}"
+                                 scrollHeight="300" rowStyleClass="#{ses.deactivated ? 'redText':''}" styleClass="noBorder" 
                                  style="min-height: 300px;">
 
                         <p:ajax event="rowSelect" process="@this tblSessionsOfSelectedConsultant" 
                                 update=":#{p:component('tblBookingsOfSelectedSession')} :#{p:component('lblSessionTotal')}"
                                 listener="#{bookingController.fillBillSessions}" />
-
-                        <p:column id="colText" headerText="Session" style="text-wrap: none;"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}">
+                        <p:column style="text-wrap: none;width: 20px!important;"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}">
                             <h:outputText value="* " rendered="#{ses.deactivated}" />
                             <h:outputText value="#{ses.sessionDate}" >
                                 <f:convertDateTime pattern="E"/>
                             </h:outputText>
-                            <h:outputText value=" &nbsp;&nbsp;" />
+                        </p:column>
+                        <p:column id="colText" headerText="Session" style="text-wrap: none;"  rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}">
+<!--                            <h:outputText value="* " rendered="#{ses.deactivated}" />
+                            <h:outputText value="#{ses.sessionDate}" >
+                                <f:convertDateTime pattern="E"/>
+                            </h:outputText>
+                            <h:outputText value=" &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" />-->
                             <h:outputText value="#{ses.sessionDate}" >
                                 <f:convertDateTime pattern="MMM/dd/yyyy"/>
                             </h:outputText>
@@ -132,7 +137,7 @@
                             </h:outputText>
                             <h:outputText value="(" />
                             <h:outputText value="#{ses.maxNo}" rendered="#{ses.maxNo ne 0}" >
-                                <f:convertNumber pattern="00" ></f:convertNumber>
+                                <f:convertNumber pattern="000" ></f:convertNumber>
                             </h:outputText>
                             <h:outputText value=") &nbsp;&nbsp;#" />
                             <h:outputText value="#{ses.displayCount+1}" style="color: red" >
