--- a/src/main/webapp/opd_search_billitem_own.xhtml
+++ b/src/main/webapp/opd_search_billitem_own.xhtml
@@ -55,12 +55,12 @@
                             </p:column>
                             <p:column headerText="Bill No" styleClass="alignTop" >
                                 <h:commandLink action="bill_reprint" value="#{pi.bill.insId}">
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>   
                             </p:column>
                             <p:column headerText="Institution Name" styleClass="alignTop"  >
                                 <h:commandLink action="bill_reprint" value="#{pi.bill.toInstitution.name}">
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
                             
@@ -109,13 +109,13 @@
                             <p:column headerText="Payment Method"   >
                                 <h:commandLink action="bill_reprint" >
                                     <h:outputLabel value="#{pi.bill.paymentMethod}" ></h:outputLabel>
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
                             <p:column headerText="Discount Scheme" >
                                 <h:commandLink action="bill_reprint" >
                                     <h:outputLabel value="#{pi.bill.paymentScheme.name}" ></h:outputLabel>
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
                             <p:column headerText="Gross Value"   >
@@ -123,7 +123,7 @@
                                     <h:outputLabel value="#{pi.bill.total}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
                             <p:column headerText="Discount"   >
@@ -131,7 +131,7 @@
                                     <h:outputLabel value="#{pi.bill.discount}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
                             <p:column headerText="Net Value"  >
@@ -139,7 +139,7 @@
                                     <h:outputLabel value="#{pi.bill.netTotal}" >
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
-                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.bill}"/>
+                                    <f:setPropertyActionListener value="#{pi.bill}" target="#{billSearch.billSearch}"/>
                                 </h:commandLink>
                             </p:column>
 
