--- a/src/main/webapp/reportLab/report_collecting_center_payment_bill.xhtml
+++ b/src/main/webapp/reportLab/report_collecting_center_payment_bill.xhtml
@@ -36,8 +36,8 @@
                                     <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                                         <p:printer target="reportPrint"  />
                                     </p:commandButton>
-                                    <p:commandButton actionListener="#{channelReportController.createCollectingCenterPaymentTable}" ajax="false" value="Excel" styleClass="noPrintButton">
-                                        <pe:exporter type="xlsx" target="tblBills" fileName="channel_report_agent_payment_bill"  />
+                                    <p:commandButton  ajax="false" value="Excel" styleClass="noPrintButton">
+                                        <pe:exporter type="xlsx" target="tblBills" fileName="collecting_center_report_agent_payment_bill"  />
                                     </p:commandButton>
                                 </h:panelGrid>
                             </h:panelGroup>
