--- a/src/main/webapp/payment_staff_bill.xhtml
+++ b/src/main/webapp/payment_staff_bill.xhtml
@@ -67,6 +67,14 @@
                                         <h:outputLabel value="#{bf.bill.insId}">
                                         </h:outputLabel>
                                     </p:column>
+                                    
+                                    <p:column headerText="Payment Methord">
+                                        <f:facet name="header">
+                                            <h:outputLabel value="Payment Methord"/>
+                                        </f:facet>    
+                                        <h:outputLabel value="#{bf.bill.paymentMethod}">
+                                        </h:outputLabel>
+                                    </p:column>
 
                                     <p:column headerText="Bill Date">
                                         <f:facet name="header">
