--- a/src/main/webapp/hr/hr_report_staff_salary_payment_bank.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_payment_bank.xhtml
@@ -198,6 +198,21 @@
                                         </h:outputLabel>  
                                     </f:facet>
                                 </p:column>
+                                
+                                <p:column rendered="#{hrReportController.otPayment and hrReportController.netSalary}" style="text-align: right;">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Total"/>
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.transExtraDutyValue+ss.overTimeValue+ss.transNetSalry}"  >
+                                        <f:convertNumber pattern="#,##0.00"/>
+                                    </p:outputLabel>
+                                    <f:facet name="footer">
+                                        <h:outputLabel value="#{hrReportController.totalOverTime+hrReportController.totalTransNetSalary}" style="text-align: right;">
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>  
+                                    </f:facet>
+                                </p:column>
+                                
                                 <p:column style="width:6%"  exportable="false" styleClass="noPrintButton">  
                                     <p:rowEditor />  
                                 </p:column>
