--- a/src/main/webapp/hr/hr_report_staff_payroll.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_payroll.xhtml
@@ -143,7 +143,7 @@
                                 </h:outputLabel>
                             </td>
                             <td style="white-space: nowrap;" ><h:outputLabel value="#{scc.staff.person.name}" /></td>                                
-                            <td style="white-space: nowrap;;" ><h:outputLabel value="#{scc.staff.designation}" /></td>  
+                            <td style="white-space: nowrap;;" ><h:outputLabel value="#{scc.staff.designation.name}" /></td>  
                             <td style="text-align: right;;" ><h:outputText value="#{scc.basicValue-scc.brValue}" >
                                     <f:convertNumber pattern="#,##0.00" />
                                 </h:outputText>                                   
